<resources>
    <string name="app_name">cft_testing</string>
    <string name="sharedPrefs">sharedPrefs</string>
    <string name="sharedPrefsIsRegistered">sharedPrefsIsRegistered</string>
    <string name="greet">Приветствие</string>
    <string name="surname">Фамилия</string>
    <string name="passwordConfirm">Подтвердите пароль</string>
    <string name="dateOfBirth">Дата Рождения</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="hello">Привет</string>
    <string name="surnameCheck">Фамилия должна быть больше 2х символов</string>
    <string name="nameCheck">Имя должно быть больше 1 символа</string>
    <string name="dateCheck">Невозможная дата</string>
    <string name="passwordCheck">Пароль должен быть более 5 символов, содержать цифры и буквы в обоих регистрах</string>
    <string name="passwordConfirmCheck">Пароли не совпадают</string>
    <string name="ok">OK</string>
    <string name="choose">✔</string>
    <string name="dash">-</string>
    <string name="sharedPrefsPassword">sharedPrefsPassword</string>
    <string name="sharedPrefsDateOfBirth">sharedPrefsDateOfBirth</string>
    <string name="sharedPrefsName">sharedPrefsName</string>
    <string name="sharedPrefsSurname">sharedPrefsSurname</string>
    <string name="empty" />
</resources>