<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/register" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextSurname"
        style="@style/mainEditText"
        android:layout_below="@id/image"
        android:background="@drawable/round_corners"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        style="@style/mainEditText"
        android:layout_below="@id/editTextSurname"
        android:background="@drawable/round_corners"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/date_picker_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_marginHorizontal="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners">

            <TextView
                android:id="@+id/textDate"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dateOfBirth" />

            <DatePicker
                android:id="@+id/dateOfBirthPicker"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/textDate"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:importantForAutofill="no" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_card"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/mainEditText"
            android:background="@drawable/round_corners"
            android:ems="15"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/registerBtn"
        android:layout_below="@id/passwordInputLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            style="@style/mainEditText"
            android:background="@drawable/round_corners"
            android:ems="15"
            android:gravity="start"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        style="@style/mainButton"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/register"
        app:backgroundTint="@null" />

</RelativeLayout>